# DaCy

./: .buildinfo  .cookiecutter.json  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  adv_tutorials.html  citation.cff  dacy.augmenters.html  dacy.datasets.html  dacy.download.html  dacy.readability.html  dacy.score.html  dacy.sentiment.html  dacy.subclasses.html  download.html  faq.html  genindex.html  index.html  installation.html  makefile  news.html  objects.inv  output.txt  performance.general.html  performance.html  performance.robustness.html  performance_ner.html  py-modindex.html  pyproject.toml  pytest-coverage.txt  requirements.txt  robustness.html  search.html  searchindex.js  setup.cfg  (+12 more)
.doctrees/: dacy.augmenters.doctree  dacy.datasets.doctree  dacy.readability.doctree  dacy.score.doctree  dacy.sentiment.doctree  dacy.subclasses.doctree  download.doctree  environment.pickle  index.doctree  installation.doctree  performance.doctree  robustness.doctree  usingdacy.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bugs.md  02_docs.md  config.yml
.github/pytest-coverage/: run_coverage.py
.github/workflows/: black_linter.yml  cache_version  (+21 more)
DaCy/: __init__.py  about.py  download.py  load.py  orth_variants.json  project.yml  requirements.txt  tests.py
DaCy_training/: project.yml  readme.md  requirements.txt
Paper/: augmentation_robustness.csv  dacy_paper_replication.py  dacy_paper_replication_tmp.py  paper.md  robustness.Rmd
_modules/: index.html
_sources/: adv_tutorials.md.txt  faq.rst.txt  index.md.txt  index.rst.txt  installation.md.txt  installation.rst.txt  news.rst.txt  performance.general.rst.txt  performance.robustness.rst.txt  performance.rst.txt  performance_ner.ipynb.txt  using_dacy.getting_started.rst.txt  using_dacy.hate_speech.rst.txt  using_dacy.rst.txt  using_dacy.sentiment.rst.txt  usingdacy.rst.txt
_static/: documentation_options.js  pygments.css  table_ent.html  table_perf.html  table_pos.html
api/: dacy.datasets.html  dacy.download.html  dacy.score.html
dacy/: __init__.py  about.py  download.py  load.py  subclasses.py  tests.py  utils.py
dacy1/: load.py
dacy_ner/: fetch_assets.py  project.yml
dev/: dacy_paper_replication.ipynb  dacy_paper_replication.py  dane_lower_robustness_check.py  name_augmenter.py  spacy_augmentation_dev.py  test_bias.ipynb  testing_score.py  tmp.py  tmp3.py  utils.py
doc_gen/: dacy.subclasses.rst
docs/: augmentation.rst  conf.py  dacy.augmenters.rst  dacy.hate_speech.rst  dacy.readability.html  dacy.sentiment.html  dacy.sentiment.rst  download.rst  faq.md  faq.rst  genindex.html  index.md  index.rst  installation.rst  ner_biases_utils.py  ner_performance.csv  news.rst  objects.inv  performance.general.rst  performance.ner new.ipynb  performance.ner.ipynb  performance.py  performance.robustness.rst  performance.rst  performance_ner.ipynb  references.bib  requirements.txt  robustness.rst  searchindex.js  tutorials.md  using_dacy.augmentation.rst  using_dacy.getting_started.rst  using_dacy.hate_speech.rst  using_dacy.rst  using_dacy.sentiment.rst  usingdacy.html  usingdacy.rst
ner_extended/: README.md  create_environments.sh  environment_setup.sh  fetch_assets.py  packaging.sh  preprocessing.sh  project.yml  requirements.txt  requirements_packaging_env.txt  requirements_preprocessing_env.txt  requirements_training_env.txt  server_dependencies.sh  split_dansk.py  train.sh  update_meta_json.py
pytest-coverage/: .coveragerc  run_coverage.py
robustness/: dacy_large_augmentation_performance.csv  dacy_large_augmentation_performance_male_female.csv  dacy_large_augmentation_performance_test.csv  dacy_large_augmentation_performance_w_dep.csv  dacy_large_augmentation_performance_w_dep2.csv  dacy_large_augmentation_performance_w_gpu.csv  dacy_large_augmentation_performance_w_overlap.csv  dacy_medium_augmentation_performance.csv  dacy_medium_augmentation_performance_male_female.csv  dacy_medium_augmentation_performance_test.csv  dacy_medium_augmentation_performance_w_dep.csv  dacy_medium_augmentation_performance_w_dep2.csv  dacy_medium_augmentation_performance_w_gpu.csv  dacy_small_augmentation_performance.csv  dacy_small_augmentation_performance_male_female.csv  dacy_small_augmentation_performance_test.csv  dacy_small_augmentation_performance_w_dep.csv  dacy_small_augmentation_performance_w_dep2.csv  dacy_small_augmentation_performance_w_gpu.csv  danlp_bert_augmentation_performance.csv  danlp_bert_augmentation_performance_male_female.csv  danlp_bert_augmentation_performance_test.csv  danlp_bert_augmentation_performance_w_overlap.csv  flair_augmentation_performance.csv  flair_augmentation_performance_male_female.csv  flair_augmentation_performance_test.csv  nerda_bert_augmentation_performance.csv  nerda_bert_augmentation_performance_male_female.csv  polyglot_augmentation_performance_male_female.csv  polyglot_augmentation_performance_w_dep2.csv  spacy_large_augmentation_performance.csv  spacy_large_augmentation_performance_male_female.csv  spacy_large_augmentation_performance_test.csv  spacy_large_augmentation_performance_w_dep.csv  spacy_large_augmentation_performance_w_dep2.csv  spacy_large_augmentation_performance_w_gpu.csv  spacy_medium_augmentation_performance.csv  spacy_medium_augmentation_performance_male_female.csv  spacy_medium_augmentation_performance_test.csv  spacy_medium_augmentation_performance_w_dep.csv  (+13 more)
sphinx/: conf.py  tst.py
tests/: test_datasets.py  test_download.py  test_hate_speech.py  test_ner.py  test_score.py  test_sentiment.py  test_utils.py
training/: readme.md
tutorials/: BenchmarkFairness.ipynb  basic.html  dacy-augmentation.ipynb  dacy-basic.ipynb  dacy-robustness.ipynb  dacy-sentiment.ipynb  dacy-spacy-tutorial.ipynb  dacy-wrapping-a-classification-transformer.ipynb  dacy_lowercase_robustness.ipynb  hate-speech.html  hate-speech.ipynb  requirements.txt  robustness.html  sentiment-neural.ipynb  sentiment-rule-based.ipynb  sentiment.html  textdescriptives.html  textdescriptives_integration.ipynb
(+371 files in other folders)
