[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dacy"
version = "2.5.0"
description = "A Danish pipeline trained in SpaCy that has achieved State-of-the-Art performance on all dependency parsing, NER and POS-tagging for Danish"
authors = [
  {name = "Kenneth Enevoldsen", email = "kennethcenevoldsen@gmail.com"}, 
  {name = "Lasse Hansen"},
  {name = "Emil Jessen"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [
    "nlp",
    "danish",
    "spacy-universe",
]
requires-python = ">=3.9"
dependencies = [
    "spacy-wrap>=1.4.1,<1.5.0",
    "spacy>=3.2.0,<3.6.0",
    "pandas>=1.0.0,<2.0.0",
    "wasabi>=0.8.2,<0.11.0",
    "tqdm>=4.42.1,<4.65.0",
    "sentencepiece>=0.1.96,<0.2.0",
]


[project.urls]
homepage = "https://centre-for-humanities-computing.github.io/DaCy/"
documentation = "https://centre-for-humanities-computing.github.io/DaCy/"
repository = "https://github.com/centre-for-humanities-computing/DaCy"
[project.license]
file = "LICENSE"
name = "Apache License 2.0"
[project.optional-dependencies]
dev = [
  "cruft",
  "mypy",  
  "pre-commit==2.20.0,<2.21.0",
  "ruff==0.0.254", # important that these match the pre-commit hooks
  "black[jupyter]==22.8.0", # important that these match the pre-commit hooks
]
tests = [
  "pytest>=7.1.2,<7.3.0",
  "pytest-cov>=3.0.0,<3.1.0",
  "pytest-xdist>=3.0.0,<3.2.0",
  "pytest-instafail>=0.4.2,<0.5.0",
]
docs = [
    "sphinx>=5.3.0,<5.4.0",
    "furo>=2022.12.7,< 2022.12.8",  # theme
    "sphinx-copybutton>=0.5.1,<0.5.2",
    "sphinxext-opengraph>=0.7.3,<0.7.4",
    "sphinx_design>=0.3.0,<0.3.1",
    "sphinx_togglebutton>=0.2.3,<0.4.0",
    "myst-nb>=0.6.0,<1.17.0",  # for rendering notebooks
    # for tutorials
    "jupyter>=1.0.0,<1.1.0",
    # sentiment analysis
    "asent>=0.4.2,<0.8.0",
    "augmenty>=1.0.2,<1.4.0",
    # for the textdescriptives tutorial
    "textdescriptives>=2.1.0,<3.0.0",
    "seaborn>=0.11.2,<0.13.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.spacy_factories]
emotion = "dacy.sentiment.wrapped_models:make_emotion_transformer"
hatespeech_classification = "dacy.hate_speech.wrapped_models:make_offensive_transformer"
ner = "dacy.ner.wrapped_models"

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = [
    "**/tests/*",
    "**/about.py",
    "**/dev/*",
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_unreachable = true

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "Q",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "W"
]
ignore = [
  "ANN101",
  "ANN401",
  "E402",
  "E501",
  "F401",
  "F841",
  "RET504",
  "ANN202",
]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py",
  ".venv",
  ".env",
  ".git",
  "__pycache__",
  "dev/**",
  "training/v0.0.0/**",
  "training/v0.1.0/**",
  "training/v0.1.1/**",
  "papers/DaCy-A-Unified-Framework-for-Danish-NLP/**"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.semantic_release]
branch = "main"
version_variable = [
  "pyproject.toml:version"
]
upload_to_pypi = true
upload_to_release = true
build_command = "python -m pip install build; python -m build"

[tool.setuptools]
include-package-data = true
