[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dacy"
version = "2.7.6"
description = "A Danish pipeline trained in SpaCy that has achieved State-of-the-Art performance on all dependency parsing, NER and POS-tagging for Danish"
authors = [
  { name = "Kenneth Enevoldsen", email = "kennethcenevoldsen@gmail.com" },
  { name = "Lasse Hansen" },
  { name = "Emil Jessen" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

keywords = ["nlp", "danish", "spacy-universe"]
requires-python = ">=3.9"
dependencies = [
  "spacy-wrap>=1.4.1",
  "spacy-experimental>=0.6.2",
  "spacy[transformers]>=3.2.0",
  "pandas>=1.0.0",
  "tqdm>=4.42.1",
]


[project.urls]
homepage = "https://centre-for-humanities-computing.github.io/DaCy/"
documentation = "https://centre-for-humanities-computing.github.io/DaCy/"
repository = "https://github.com/centre-for-humanities-computing/DaCy"
[project.license]
file = "LICENSE"
name = "Apache License 2.0"
[project.optional-dependencies]
dev = [
  "cruft>=2.0.0",
  "pyright>=1.1.339",
  "ruff>=0.0.270",
]
tests = ["pytest>=7.1.2", "pytest-cov>=3.0.0", "pytest-instafail>=0.4.2"]
docs = [
  "sphinx==5.3.0",
  "furo>=2022.12.7",             # theme
  "sphinx-copybutton>=0.5.1",
  "sphinxext-opengraph>=0.7.3",
  "sphinx_design>=0.3.0",
  "sphinx_togglebutton>=0.2.3",
  "myst-nb>=0.6.0",              # for rendering notebooks
  "sphinxcontrib-bibtex>=2.0.0",
  # required for building the docs with references
  # potentially see https://sourceforge.net/p/docutils/patches/195/
  # and related issues
  # not possible to upgrade to >0.20.0 as sphinx <7 is required
  # for most of the extensions and it is not compatible with
  # docutils >0.20.0
  "docutils==0.17.1",
  # for tutorials
  "jupyter>=1.0.0",
  "wikidata>=0.7.0",
  # sentiment analysis
  "asent>=0.4.2",
  "augmenty>=1.0.2",
  # for the textdescriptives tutorial
  "textdescriptives>=2.1.0",
  "seaborn>=0.11.2",
  # for performance notebooks
  "altair>=4.1.0",
  "datasets>=1.14.0",

]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.spacy_factories]
"dacy/emotion" = "dacy.sentiment.wrapped_models:make_emotion_transformer"
"dacy/hatespeech_classification" = "dacy.hate_speech.wrapped_models:make_offensive_transformer"
"dacy/ner" = "dacy.ner.wrapped_models"
"dacy/ner-fine-grained" = "dacy.ner.fine_grained"

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = ["**/tests/*", "**/about.py", "**/dev/*"]

[tool.pyright]
exclude = [".*venv*"]
pythonPlatform = "Darwin"

[tool.ruff]
# extend-include = ["*.ipynb"]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "Q",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "W",
]
ignore = [
  "ANN101",
  "ANN401",
  "E402",
  "E501",
  "F401",
  "F841",
  "RET504",
  "ANN202",
  "COM812",
]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py",
  ".venv",
  ".env",
  ".git",
  "__pycache__",
  "dev/**",
  "training/main/**",
  "training/ner_fine_grained/**",
  "papers/DaCy-A-Unified-Framework-for-Danish-NLP/**",
  "docs/performance_testing_utils/**",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"

[tool.setuptools]
include-package-data = true
