[metadata]
name = dacy
description = A Danish pipeline trained in SpaCy that has achieved State-of-the-Art performance on all dependency parsing, NER and POS-tagging for Danish
author = Kenneth Enevoldsen
author_email = kennethcenevoldsen@gmail.com
url = https://github.com/centre-for-humanities-computing/DaCy
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    nlp 
    danish
[options]
packages = find:
include_package_data = true
python_requires = >=3.7
zip_safe = false
install_requires =
    spacy_wrap>=0.0.8,<0.1.0
    spacy>=3.2.0,<3.3.0
    pandas>=1.0.0,<2.0.0
    wasabi>=0.8.2,<0.10.0
    tqdm>=4.61.2,<4.62.0

setup_requires =
    setuptools

[options.extras_require]
large = 
    protobuf>=3.17.3,<3.18.0
    sentencepiece>=0.1.96,<0.2.0
all = 
    protobuf>=3.17.3,<3.18.0
    sentencepiece>=0.1.96,<0.2.0

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/tests/*
    **/_vendorized/*
    **/about.py
    **/sentiment/vaderSentiment_da.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True

[options.entry_points]
spacy_factories =
    classification_transformer = dacy.sentiment.wrapped_model:make_emotion_transformer
    classification_transformer = dacy.hate_speech.wrapped_model:make_offensive_transformer